# analog-denseam

./: .flake8  README.md  config.py  data.py  grads.ipynb  make_plots.ipynb  model.py  model_dynamics.py  model_energy_train.py  mypy.ini  output.txt  output_new_froward_pass.txt  output_old_forward_pass.txt  output_recalculate_xi_attn.txt  plot_training.ipynb  plots.ipynb  pyproject.toml  test_loss.py  utils.py
data/: accs.json  losses.json  model_best.npz  parity_data_test_X.txt  parity_data_test_y.txt  parity_data_train_X.txt  parity_data_train_y.txt
